// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render tests should add snapshot chart data with fail examples 1`] = `
Object {
  "backgroundColor": Array [
    "#dc3545",
  ],
  "data": Array [
    2,
  ],
  "labels": Array [
    "Failed",
  ],
}
`;

exports[`Render tests should add snapshot chart data with no examples 1`] = `
Object {
  "backgroundColor": Array [
    "#007bff",
  ],
  "data": Array [
    "1",
  ],
  "labels": Array [
    "Added",
  ],
}
`;

exports[`Render tests should add snapshot chart data with pass examples 1`] = `
Object {
  "backgroundColor": Array [
    "#28a745",
    "#007bff",
  ],
  "data": Array [
    2,
    "1",
  ],
  "labels": Array [
    "Passed",
    "Added",
  ],
}
`;

exports[`Render tests should build chart data with fail examples 1`] = `
Object {
  "backgroundColor": Array [
    "#dc3545",
  ],
  "data": Array [
    1,
  ],
  "labels": Array [
    "Failed",
  ],
}
`;

exports[`Render tests should build chart data with no examples 1`] = `
Object {
  "backgroundColor": Array [],
  "data": Array [],
  "labels": Array [],
}
`;

exports[`Render tests should build chart data with pass and fail examples 1`] = `
Object {
  "backgroundColor": Array [
    "#28a745",
    "#dc3545",
  ],
  "data": Array [
    1,
    2,
  ],
  "labels": Array [
    "Passed",
    "Failed",
  ],
}
`;

exports[`Render tests should build chart data with pass examples 1`] = `
Object {
  "backgroundColor": Array [
    "#28a745",
  ],
  "data": Array [
    1,
  ],
  "labels": Array [
    "Passed",
  ],
}
`;

exports[`Render tests should build chart data with passing, pending, and failing examples 1`] = `
Object {
  "backgroundColor": Array [
    "#28a745",
    "#dc3545",
    "#ffc107",
  ],
  "data": Array [
    1,
    2,
    1,
  ],
  "labels": Array [
    "Passed",
    "Failed",
    "Pending",
  ],
}
`;

exports[`Render tests should build chart data with pending and fail examples only 1`] = `
Object {
  "backgroundColor": Array [
    "#dc3545",
    "#ffc107",
  ],
  "data": Array [
    1,
    1,
  ],
  "labels": Array [
    "Failed",
    "Pending",
  ],
}
`;

exports[`Render tests should create link to coverage report if in config 1`] = `"/some/place/index.html"`;

exports[`Render tests should not create link to coverage report if not in config 1`] = `"#"`;
